bundle/manifests/frr-k8s-webhook-service_v1_service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: frr-k8s-webhook-service
spec:
  ports:
  - port: 443
    targetPort: 9443
  selector:
    control-plane: webhook-server
status:
  loadBalancer: {}
