bundle/manifests/metallb-operator-webhook-service_v1_service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: metallb-operator-webhook-service
spec:
  ports:
  - port: 443
    targetPort: 9443
  selector:
    component: webhook-server
status:
  loadBalancer: {}
